--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "eslint": "^6.1.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
-    "moleculer-repl": "^0.5.7"
+    "moleculer-repl": "^0.6.1"
   },
   "dependencies": {
+    "googleapis": "^44.0.0",
+    "moleculer": "^0.13.9",
     "moleculer-web": "^0.8.5",
-    "nats": "^1.3.0",
-    "moleculer": "^0.13.9"
+    "nats": "^1.3.0"
   },
   "engines": {
     "node": ">= 8.x.x"
