--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "moleculer-repl": "^0.6.1"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "googleapis": "^44.0.0",
+    "lodash": "^4.17.15",
     "moleculer": "^0.13.9",
     "moleculer-web": "^0.8.5",
     "nats": "^1.3.0"
