--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
       context: .
     image: analytics-service
     container_name: analytics-service-api
-    env_file: 
-      - docker-compose.env
-      - .env
+    env_file: docker-compose.env
     environment:
       SERVICES: api
       PORT: 3000
@@ -24,7 +22,7 @@ services:
     networks:
       - internal
 
-  greeter:
+  analytics-starter:
     build:
       context: .
     image: analytics-service
@@ -56,10 +54,10 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.backend=traefik"
-      - "traefik.port=8090"
+      - "traefik.port=8080"
     ports:
-      - 3002:80
-      - 3003:8090
+      - 3000:80
+      - 3001:8080
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /dev/null:/traefik.toml
