--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version : 2
+version : 2.1
 jobs:
   build:
     docker:
@@ -6,5 +6,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Update to latest npm version
+          command: 'sudo npm install -g npm@latest'
+      - restore_cache: # special step to restore the dependency cache
+          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+          key: dependency-cache-{{ checksum "package-lock.json" }}
+      - run:
           name: Install dependencies
-          command: npm i
+          command: npm install
