--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "googleapis": "^44.0.0",
     "lodash": "^4.17.15",
     "moleculer": "^0.13.9",
-    "moleculer-web": "^0.8.5",
+    "moleculer-web": "^0.9.0-beta6",
     "nats": "^1.3.0"
   },
   "engines": {
