--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             chmod +x ~/docker-compose
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - setup_remote_docker:
-          docker_layer_caching: true
+          docker_layer_caching: false 
       - run:
           name: Build
           command: |
