Added redis config and removed dotenv

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,16 @@ services:
       - "traefik.enable=false"
     networks:
       - internal
-  
+
   redis:
     image: redis
     networks:
       - internal
+    ports:
+      - "6379:6379"
+    volumes:
+      - ../redis/data:/data
+    restart: always
 
   traefik:
     image: traefik:1.7
