Added a redis port config check

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - "6379:6379"
     volumes:
       - ../redis/data:/data
+    entrypoint: redis-server --appendonly yes  
     restart: always
 
   traefik:
