--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,6 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: false 
       - run:
-          name: Build
+          name: Build using docker-compose
           command: |
             docker-compose build
