--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,6 @@ jobs:
       - run:
           name: Install dependencies
           command: npm install
-      - install-docker-compose 
       - run:
           name: Install `docker-compose`
           command: |
@@ -27,7 +26,6 @@ jobs:
           name: Build using `docker-compose`
           command: |
             docker-compose build
-      - push-latest-docker-image
       - run:
           name: Login for Docker Hub
           command: | 
@@ -36,10 +34,9 @@ jobs:
           name: Push to Docker Hub
           command: |
             docker-compose push
-      - ssh-to-remote
       - run:
           name: SSH to Digital Ocean Droplet
           command: |
-
+            ssh root@$DIGITALOCEAN_HOST docker pull $DOCKER_USERNAME/$DOCKER_IMAGE:latest
 
       
