--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,9 @@ jobs:
           command: |
             docker-compose push
       - run: ssh-keyscan $DIGITALOCEAN_HOST >> ~/.ssh/known_hosts
+      - add_ssh_keys:
+          fingerprints:
+            - 6f:6b:d9:0d:c2:a3:2c:d7:be:b7:f0:27:18:fd:17:bf
       - run:
           name: Remove currently running containers 
           command: |
