--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
       - run:
           name: Remove currently running containers 
           command: |
+            # example
             ssh root@$DIGITALOCEAN_HOST docker ps 
 
       
