--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "microservices",
     "moleculer"
   ],
-  "author": "",
+  "author": "Rishi Ghan",
   "devDependencies": {
-    "connect-redis": "^4.0.3",
     "eslint": "^6.1.0",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
-    "moleculer-repl": "^0.6.1",
-    "redis": "^2.8.0"
+    "moleculer-repl": "^0.6.1"
   },
+  
   "dependencies": {
     "googleapis": "^44.0.0",
+    "redis": "^2.8.0",
+    "connect-redis": "^4.0.3",
     "lodash": "^4.17.15",
     "moleculer": "^0.13.9",
     "moleculer-web": "^0.9.0-beta6",
