--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,5 +41,5 @@ jobs:
           name: Deploy to Digital Ocean Droplet
           command: |
             # example
-            bash ./scripts/deploy/deploy.sh analytics_service_config analytics-service
+            bash ./scripts/deploy/deploy.sh -u $DIGITALOCEAN_USERNAME -h $DIGITALOCEAN_HOST -d as_config -s SERVICE_NAME 
       
