--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ jspm_packages/
 # Typescript v1 declaration files
 typings/
 
+# Docker-produced directories
+redis
+as_config
+
 # Optional npm cache directory
 .npm
 
