--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,12 @@ services:
       - ../redis/data:/data
     entrypoint: redis-server --appendonly yes  
     restart: always
+  zookeeper:
+    image: 'bitnami/zookeeper:latest'
+    ports:
+      - '2181:2181'
+    volumes:
+      - /path/to/zookeeper-persistence:/bitnami/zookeeper
 
   traefik:
     image: traefik:1.7
