--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "jest-cli": "^24.8.0",
     "moleculer-repl": "^0.6.1"
   },
-  
   "dependencies": {
-    "googleapis": "^44.0.0",
-    "redis": "^2.8.0",
     "connect-redis": "^4.0.3",
+    "googleapis": "^44.0.0",
     "lodash": "^4.17.15",
     "moleculer": "^0.13.9",
     "moleculer-web": "^0.9.0-beta6",
-    "nats": "^1.3.0"
+    "nats": "^1.3.0",
+    "redis": "^2.8.0",
+    "zookeeper": "^4.5.0"
   },
   "engines": {
     "node": ">= 8.x.x"
