--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "moleculer": "^0.13.9",
     "moleculer-web": "^0.9.0-beta6",
     "nats": "^1.3.0",
-    "node-zookeeper-client": "^1.1.0",
+    "node-zookeeper-client": "^1.1.0"
   },
   "engines": {
     "node": ">= 8.x.x"
