Added a JVM flag to Docker env

--- a/docker-compose.env
+++ b/docker-compose.env
@@ -5,6 +5,6 @@ SERVICEDIR=services
 
 ZOOKEEPER_HOST=zookeeper
 ZOO_AUTOPURGE_RETAIN_COUNT=3
-ZOO_HEAP_SIZE=64
 
+JVMFLAGS=-Xmx64m
 TRANSPORTER=nats://nats:4222
