Fixed typos, removed reference to old param

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,6 @@ jobs:
             # example
             bash ./scripts/deploy/deploy.sh -u $DIGITALOCEAN_USERNAME \
                                             -h $DIGITALOCEAN_HOST \
-                                            -s SERVICE_NAME \
+                                            -s $SERVICE_NAME \
                                             -r $REPOSITORY_BASE_URL 
       
