Changed external n/w config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,8 +78,9 @@ services:
       # - /dev/null:/traefik.toml
     networks:
       - rgnetwork
+      - default
 
 networks:
   rgnetwork:
-    external:
-      name: rgnetwork
+    driver: bridge
+    name: rgnetwork
