--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.7"
 
 services:
   analytics-api:
@@ -17,7 +17,8 @@ services:
       - traefik.http.services.analytics-api.loadbalancer.server.port=3000
       - traefik.enable=true
       - traefik.docker.network=rgnetwork
-      - traefik.http.routers.analytics-api.rule=Host(`services.rishighan.com`) && PathPrefix(`/`)
+      - traefik.http.routers.analytics-api.service=analytics-api@docker
+      - traefik.http.routers.analytics-api.rule=Host(`localhost`) && PathPrefix(`/api/analytics/`)
     networks:
       - rgnetwork
 
@@ -84,3 +85,4 @@ networks:
   rgnetwork:
     driver: bridge
     name: rgnetwork
+    internal: false
