--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,17 @@ services:
     environment:
       SERVICES: api
       PORT: 3000
-    depends_on:
+    external_links: 
       - nats
       - zookeeper
     labels:
       - traefik.http.services.analytics-api.loadbalancer.server.port=3000
       - traefik.enable=true
-      - traefik.docker.network=rgnetwork
+      - traefik.docker.network=gateway
       - traefik.http.routers.analytics-api.service=analytics-api@docker
       - traefik.http.routers.analytics-api.rule=Host(`localhost`) && PathPrefix(`/api/analytics/`)
     networks:
-      - rgnetwork
+      - gateway
 
   analytics-service:
     build:
@@ -32,57 +32,12 @@ services:
       SERVICES: analytics
     labels:
       - traefik.enable=false
-    depends_on:
+    external_links: 
       - nats
       - zookeeper
     networks:
-      - rgnetwork
-
-  nats:
-    image: nats
-    container_name: nats
-    labels:
-      - traefik.enable=false
-    networks:
-      - rgnetwork
-
-  zookeeper:
-    image: 'bitnami/zookeeper:latest'
-    container_name: zookeeper
-    environment: 
-      ALLOW_ANONYMOUS_LOGIN: 'yes'
-    labels:
-      - traefik.enable=false
-    ports:
-      - '2181:2181'
-    volumes:
-      - ../zookeeper/data:/bitnami/zookeeper
-    networks:
-      - rgnetwork
-
-  traefik:
-    image: traefik:v2.0.1
-    container_name: traefik
-    restart: unless-stopped
-    command:
-      - --entrypoints.web.address=:80
-      - --providers.docker=true
-      - --api.insecure=true
-      - --providers.docker.exposedbydefault=false
-    labels:
-      - traefik.docker.network=rgnetwork
-    ports:
-      - "80:80"
-      - "8080:8080"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      # - /dev/null:/traefik.toml
-    networks:
-      - rgnetwork
-      - default
+      - gateway
 
 networks:
-  rgnetwork:
-    driver: bridge
-    name: rgnetwork
-    internal: false
+  gateway:
+    external: true
