--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - traefik.docker.network=gateway
       - traefik.http.routers.analytics-api.service=analytics-api@docker
       - traefik.http.routers.analytics-api.rule=Host(`localhost`) && PathPrefix(`/api/analytics/`)
+      - traefik.http.routers.analytics-api.tls=true
+      - traefik.http.routers.analytics-api.tls.certresolver=do
     networks:
       - gateway
 
