--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       - traefik.docker.network=gateway
       - traefik.http.routers.analytics-api.service=analytics-api@docker
       - traefik.http.routers.analytics-api.rule=Host(`localhost`) && PathPrefix(`/api/analytics/`)
-      - traefik.http.routers.api.tls=true
-      - traefik.http.routers.api.tls.certresolver=le
+      - traefik.http.routers.analytics-api.tls=true
+      - traefik.http.routers.analytics-api.tls.certresolver=le
     networks:
       - gateway
 
