--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - traefik.enable=true
       - traefik.docker.network=gateway
       - traefik.http.routers.analytics-api.service=analytics-api@docker
-      - traefik.http.routers.analytics-api.rule=Host(`localhost`) && PathPrefix(`/api/analytics/`)
+      - traefik.http.routers.analytics-api.rule=Host(`services.rishighan.com`) && PathPrefix(`/api/analytics/`)
       - traefik.http.routers.analytics-api.tls=true
       - traefik.http.routers.analytics-api.tls.certresolver=le
     networks:
