--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - traefik.http.routers.analytics-api.rule=Host(`services.rishighan.com`) && PathPrefix(`/api/analytics/`)
       - traefik.http.routers.analytics-api.tls=true
       - traefik.http.middlewares.https_redirect.redirectscheme.scheme=https
-      - traefik.http.routers.api.middlewares=https_redirect
+      - traefik.http.routers.analytics-api.middlewares=https_redirect
       - traefik.http.routers.analytics-api.tls.certresolver=le
     networks:
       - gateway
