--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "dependencies": {
     "googleapis": "^44.0.0",
     "lodash": "^4.17.15",
-    "moleculer": "^0.13.9",
-    "moleculer-web": "^0.9.0-beta6",
+    "moleculer": "^0.14.3",
+    "moleculer-web": "^0.9.1",
     "nats": "^1.3.0",
     "node-zookeeper-client": "^1.1.0"
   },
