--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       - traefik.http.routers.analytics-api.entrypoints=websecure
       - traefik.http.routers.analytics-api.service=analytics-api@docker
       - traefik.http.routers.analytics-api.rule=Host(`services.rishighan.com`) && PathPrefix(`/api/analytics/`)
-      - traefik.http.routers.analytics-api.tls=true
-      - traefik.http.routers.analytics-api.tls.certresolver=le
+      # - traefik.http.routers.analytics-api.tls=true
+      # - traefik.http.routers.analytics-api.tls.certresolver=le
     networks:
       - gateway
 
