--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,9 @@ services:
       PORT: 9876
     external_links: 
       - nats
-      - zookeeper
-    labels:
-      - traefik.http.services.analytics-api.loadbalancer.server.port=9876
-      - traefik.enable=true
-      - traefik.docker.network=gateway
-      # - traefik.http.routers.analytics-api.entrypoints=websecure
-      - traefik.http.routers.analytics-api.service=analytics-api@docker
-      - traefik.http.routers.analytics-api.rule=Host(`services.rishighan.com`) && PathPrefix(`/api/analytics/`)
-      # - traefik.http.routers.analytics-api.tls=true
-      # - traefik.http.routers.analytics-api.tls.certresolver=le
+      - caddy
     networks:
-      - gateway
+      - main-network 
 
   analytics-service:
     build:
@@ -33,14 +24,13 @@ services:
     env_file: docker-compose.env
     environment:
       SERVICES: analytics
-    labels:
-      - traefik.enable=false
     external_links: 
       - nats
       - zookeeper
+      - caddy
     networks:
-      - gateway
+      - main-network
 
 networks:
-  gateway:
+  main-network:
     external: true
